--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 </head>
 <body>
   <div class="message">
-    Cố lên! Sắp ra rồi, sắp ra rồi
+    Bạn hãy thực hiện 3 nhiệm vụ để nhận thêm hint tìm X của mình nhé! 
+1. Follow kênh tiktok Vietlac.net, Thư viện An Vi, Cổ Phong
+2. Mời bạn bè follow fanpage Thư viện An Vi, Cổ Phong, Solar123
+3. Làm xong 2 nhiệm vụ trên gửi ảnh chụp màn hình cho BTC (Đặng Giang) để nhận thêm hint!
   </div>
 </body>
 </html>
