--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
 </head>
 <body>
   <div class="message">
-  Bạn hãy thực hiện 3 nhiệm vụ để nhận thêm hint tìm X của mình nhé!<br><br>
-  1. Follow kênh tiktok Vietlac.net, Thư viện An Vi, Cổ Phong<br>
-  2. Mời bạn bè follow fanpage Thư viện An Vi, Cổ Phong, Solar123<br>
-  3. Làm xong 2 nhiệm vụ trên gửi ảnh chụp màn hình cho BTC (Đặng Giang) để nhận thêm hint!
+ lêu lêu lêu :p 
 </div>
 
 </body>
